--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "dependencies": {
     "@auth-kit/react-router": "^3.1.3",
-    "@types/react-router-dom": "^5.3.3",
+    "add": "^2.0.6",
     "react": "^18.3.1",
     "react-auth-kit": "^3.1.3",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.3"
+    "react-router": "^7.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
